# CRIMP

./: sequence_runner
commands/: all_joints  close  default_poses.sh  open  sequence_sprinter  set_all_joints  set_one_joint  set_wrists  store_acc  store_angles  store_vel  suction  where_tf_am_i
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crimp_cpp/share/ament_index/resource_index/package_run_dependencies/: crimp_cpp
install/crimp_cpp/share/crimp_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/crimp_python/lib/crimp_python/: lidar
install/crimp_python/share/crimp_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msgs/include/custom_msgs/custom_msgs/msg/: suction_force.h  suction_request.h
install/custom_msgs/include/custom_msgs/custom_msgs/msg/detail/: suction_force__builder.hpp  suction_force__functions.c  suction_force__functions.h  suction_force__rosidl_typesupport_introspection_c.h  suction_force__rosidl_typesupport_introspection_cpp.hpp  suction_force__struct.h  suction_force__struct.hpp  suction_force__traits.hpp  suction_force__type_support.c  suction_force__type_support.cpp  suction_force__type_support.h  suction_force__type_support.hpp  suction_request__description.c  suction_request__functions.c  suction_request__rosidl_typesupport_fastrtps_c.h  suction_request__rosidl_typesupport_introspection_cpp.hpp  suction_request__struct.hpp  suction_request__traits.hpp  suction_request__type_support.hpp
install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh  package.xml
install/custom_msgs/share/custom_msgs/cmake/: rosidl_cmake-extras.cmake
install/custom_msgs/share/custom_msgs/msg/: SuctionForce.json  SuctionForce.msg  SuctionRequest.json
install/examples/lib/examples/: talker
install/examples/share/ament_index/resource_index/parent_prefix_path/: examples
install/examples/share/examples/: local_setup.sh  package.sh  package.xml
install/examples/share/examples/cmake/: examplesConfig.cmake
install/examples_python/lib/examples_python/: listener  pubsub  talker
install/examples_python/share/examples_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/crimp_cpp/: CMakeLists.txt  package.xml
src/crimp_cpp/src/: .suction_cups.cpp.swp  joint_mover.cpp  motion_planner.cpp  serial.cpp  servo_node.cpp  suction_cups.cpp
src/crimp_python/: package.xml  setup.cfg  setup.py
src/crimp_python/crimp_python/: motion_controller.py  service_member_function.py
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: SuctionRequest.msg
src/custom_msgs/srv/: ID.srv  ReportPose.srv  SCWritePWM.srv  SCWritePos.srv  STWritePos.srv  SuctionControl.srv  WriteData.srv
src/examples_cpp/: CMakeLists.txt  package.xml
src/examples_python/: setup.cfg  setup.py
